--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
         <div class="app">
             <button id="button" onclick="camera()" style="width: 100px;">Camera!</button>
         </div>
-        <img src="" id="foto" />
+        <img style="padding-top:50px;" src="" id="foto" />
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
